--- a/install.html
+++ b/install.html
@@ -30,7 +30,7 @@
   <body>
     <div class="app">
       <header>
-        <h1>Abrechnung</h1>
+        <h1>Vokabel</h1>
       </header>
       <main>
         <noscript>
